--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,9 @@
   "author": "stripe-demos",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "nodemon": "^2.0.12",
     "stripe": "^8.154.0"
   }
